(Breaking change) Wiki: *getImageHistory: rename to getFileHistory, vectorize, bug fixes. *add file reversion.